Added localtime mounting

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,8 @@ services:
     networks:
       - pricebot
     restart: unless-stopped
+    volumes:
+      - /etc/localtime:/etc/localtime:ro
 
 networks:
   pricebot:
